fix spacing of dropdown arrows on FAQ page

--- a/wp-content/themes/our-new-tenet/style.css
+++ b/wp-content/themes/our-new-tenet/style.css
@@ -72,6 +72,7 @@ body {
 .containter {
   height: auto; 
   min-height: 100%;
+  overflow-x: hidden;
 }
 
 .entry-content ul {
@@ -436,13 +437,13 @@ li.menu-item {
 p.trigger {
   color: #3c3c39;
   padding: 10px 25px 6px 0;
-  background: url(images/toggle-down-lg-ltgray.png) no-repeat 620px 24px;
+  background: url(images/toggle-down-lg-ltgray.png) no-repeat 660px 24px;
   border-bottom: 1px solid #e5e5e5;
   border-top: none;
 }
 
 p.trigger:hover {
-  background: url(images/toggle-down-lg-orange.png) no-repeat 620px 24px;
+  background: url(images/toggle-down-lg-orange.png) no-repeat 660px 24px;
 }
 
 p.trigger:hover a {
@@ -472,13 +473,13 @@ p.trigger.active a:hover {
 }
 
 p.trigger.active {
-  background: url(images/toggle-up-lg-ltgray.png) no-repeat 620px 24px;
+  background: url(images/toggle-up-lg-ltgray.png) no-repeat 660px 24px;
   border: none;
   padding-left: 0;
 }
 
 p.trigger.active:hover {
-  background: url(images/toggle-up-lg-orange.png) no-repeat 620px 24px;
+  background: url(images/toggle-up-lg-orange.png) no-repeat 660px 24px;
   border: none;
   padding-left: 0;
 }
